# dioxus-page-generation

./: .gitignore  Cargo.toml  README.md
my-macros/: Cargo.toml
my-macros/src/: lib.rs
my-macros/tests/data/test_correct/SubDir1/: SubDir1Page0
my-macros/tests/data/test_correct/SubDir1/SubDir1SubDir0/: SubDir1SubDir1Page0
my-macros/tests/data/test_dir_wrong/sub_dir_0/: SubDir0Page0  SubDir0Page1
my-macros/tests/data/test_pages_wrong/: Page0
my-macros/tests/pages/SubDir0/: SubPage0  SubPage1
my-macros/tests/pages/SubDir0/SubSubDir0/: SubSubPage0
my-site/: Cargo.toml  Dioxus.toml
my-site/pages/: SubPage1
my-site/src/: components.rs  main.rs
