[package]
name = "my-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-macros = { path = "../my-macros" }
#dioxus = { version = "0.5.6", features = ["web", "router"] }
dioxus = { version = "0.6.0-alpha.1", features = ["web", "router"] }
