[package]
name = "my-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-macros = { path = "../my-macros" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "0de3bf7aeb3403324f7250e9e2c0dc1b7abae042", features = ["web", "router"] }
